# teletel

./: .gitattributes  .gitignore  Cargo.toml  README.md
.github/images/: Dockerfile
.github/workflows/: build.yaml  cross-platform.yaml  workflow.yaml
derive/: Cargo.toml
derive/src/: lib.rs
examples/: 3615.vdt  hello.rs  lab.rs  load_vdt.rs  lumon.rs  semigraphic.rs
examples/hello/: Cargo.toml
examples/hello/src/: main.rs
examples/load-vdt/: Cargo.toml
examples/load-vdt/src/: main.rs
examples/semigraphic/: Cargo.toml
examples/semigraphic/src/: main.rs
minitel-emulator/: Cargo.toml
minitel-emulator/src/: config.rs  glyphs.rs  main.rs  render.rs  transport.rs
minitel-emulator/src/render/: beep.rs  debug.rs  mod.rs  palette.rs  setup.rs  terminal.rs
src/: error.rs  lib.rs  macros.rs  minitel.rs  utils.rs  wrapper.rs
src/backend/: buffer.rs  mod.rs  serial.rs
src/protocol/: codes.rs  mod.rs  parser.rs  to_backend.rs  to_teletel.rs
src/receiver/: buffer.rs  file.rs  mod.rs  serial.rs
src/specifications/: codes.rs  parser.rs
src/terminal/: buffer.rs  file.rs  mod.rs  serial.rs  to_terminal.rs
src/wrapper/: drawing.rs  functions.rs  mod.rs  protocol.rs
teletel/: Cargo.toml
teletel-derive/src/: lib.rs
teletel-protocol/: Cargo.toml
teletel-protocol/src/: codes.rs  lib.rs  macros.rs
teletel-protocol/src/parser/: mod.rs
teletel/src/: error.rs  lib.rs  macros.rs
teletel/src/terminal/: buffer.rs  emulator.rs  file.rs  mod.rs  serial.rs  tcp.rs  to_terminal.rs
teletel/src/terminal/combinators/: mod.rs  optional.rs  pipe.rs  tap.rs  tee.rs
teletel/src/wrapper/: drawing.rs  functions.rs  mod.rs  protocol.rs
