[package]
name = "teletel"
version = "0.1.0"
edition = "2021"

[dependencies]
teletel-derive = { path = "derive" }
serial2 = { version = "0.2.28", optional = true }
unidecode = "0.3.0"

[features]
default = []
minitel1b = []
minitel2 = []
colors = []
serial = ["dep:serial2"]
strict = []

[[example]]
name = "hello"
required-features = ["serial", "strict"]

[[example]]
name = "semigraphic"
required-features = ["serial", "strict"]

[[example]]
name = "load_vdt"
required-features = ["serial", "strict"]
