[workspace]
members = ["teletel", "teletel-*", "examples/*"]
default-members = ["teletel", "teletel-*"]
resolver = "2"

[workspace.package]
rust-version = "1.75"

[workspace.lints.rust]
unsafe_code = "forbid"

rust_2018_idioms = { level = "warn", priority = -1 }
missing_debug_implementations = "warn"
missing_docs = "warn"
unreachable_pub = "warn"

